[gd_scene load_steps=6 format=2]

[ext_resource path="res://Client/scripts/main.gd" type="Script" id=1]
[ext_resource path="res://Icons/Network.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Spoikofo-filled.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/KleintenDynFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1351.0
margin_top = -638.0
margin_right = -1311.0
margin_bottom = -598.0
rect_scale = Vector2( 1872.19, 147.304 )
color = Color( 0, 0, 0, 1 )

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="ui"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ui/CenterContainer"]
pause_mode = 2
margin_left = 353.0
margin_top = 217.0
margin_right = 670.0
margin_bottom = 383.0
custom_constants/separation = 10

[node name="label" type="Label" parent="ui/CenterContainer/VBoxContainer"]
margin_right = 317.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Introduce your name"

[node name="message" type="Label" parent="ui/CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 317.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Message"

[node name="line_edit" type="LineEdit" parent="ui/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 58.0
margin_right = 317.0
margin_bottom = 82.0

[node name="button" type="Button" parent="ui/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 92.0
margin_right = 317.0
margin_bottom = 112.0
text = "Play"

[node name="message2" type="Label" parent="ui/CenterContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 317.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 2 )
text = "Message"

[node name="message3" type="Label" parent="ui/CenterContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 317.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 2 )
text = "Message"

[node name="button2" type="Button" parent="ui/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 146.0
margin_right = 317.0
margin_bottom = 166.0
text = "Quit"

[node name="network" type="Sprite" parent="ui/CenterContainer/VBoxContainer"]
position = Vector2( -242, -149 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="world" type="Spatial" parent="."]

[node name="players" type="Node" parent="world"]

[connection signal="pressed" from="ui/CenterContainer/VBoxContainer/button" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="ui/CenterContainer/VBoxContainer/button2" to="." method="_on_button2_pressed"]
